--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	<body>
 
 		<h1>Projeto do projeto GIT</h1>
-		<h1>Projeto do projeto GIT</h1>
-		<h1>Projeto do projeto GIT</h1>
-		<h1>Projeto do projeto GIT</h1>
+	
+	<table>
+	<tr>
+	<td>casa</td>
+	</tr>
+	</table>
 		
 	</body>
-		
-		
+			
 </html>
