--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" href="style.css"
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -10,9 +10,9 @@
 		<h1>Projeto do projeto GIT</h1>
 	
 	<table>
-	<tr>
-	<td>casa</td>
-	</tr>
+		<tr>
+			<td>casa</td>
+		</tr>
 	</table>
 		
 	</body>
