--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 	<head>
 		<meta charset="UTF-8"/>
@@ -7,7 +7,10 @@
 
 	<body>
 
-		<h1>Projeto do projeto GIT</h1> 
+		<h1>Projeto do projeto GIT</h1>
+
+		<h1>Projeto do projeto GIT</h1>
+		
 	</body>
 
 </html>
