--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	</head>
 	<body>
 		<h1>Projeto do projeto GIT</h1>
-		<h1>Projeto do projeto GIT</h1>
 	<table>
 		<tr>
-			<td>casa</td>
+			<td class='modelo'>casa</td>
 		</tr>
 	</table>
 	</body>
